k8s/manifests-8cca26/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-8cca26
  namespace: journee
  labels:
    app: journee-8cca26
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-8cca26
  template:
    metadata:
      labels:
        app: journee-8cca26
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-8cca26
          image: gcr.io/my-docker-471807/journee:v7.1.0
          ports:
            - containerPort: 3000
