k8s/manifests-8cca26/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-8cca26
  namespace: journee
spec:
  selector:
    app: journee-8cca26
  ports:
    - port: 80
      targetPort: 3000
